--- a/others/comparing-windsurf-vs-qodo.mdx
+++ b/others/comparing-windsurf-vs-qodo.mdx
@@ -14,7 +14,45 @@ As AI-powered development tools continue to reshape how we write code, [Codeium'
 
 ## Feature Comparison
 
-   [ 
+   <table style={{
+  borderCollapse: 'collapse',
+  width: '100%',
+  margin: '2rem 0',
+  borderRadius: '8px',
+  overflow: 'hidden',
+  fontSize: '0.95rem',
+  lineHeight: '1.5'
+}}>
+  <thead>
+    <tr>
+      <th style={{
+        backgroundColor: '#f8fafc',
+        padding: '1rem',
+        textAlign: 'left',
+        borderBottom: '1px solid #e2e8f0',
+        fontWeight: '600',
+        color: '#1a202c'
+      }}>Feature</th>
+      <th style={{
+        backgroundColor: '#f8fafc',
+        padding: '1rem',
+        textAlign: 'center',
+        borderBottom: '1px solid #e2e8f0',
+        fontWeight: '600',
+        color: '#1a202c'
+      }}>Windsurf</th>
+      <th style={{
+        backgroundColor: '#f8fafc',
+        padding: '1rem',
+        textAlign: 'center',
+        borderBottom: '1px solid #e2e8f0',
+        fontWeight: '600',
+        color: '#1a202c'
+      }}>Qodo</th>
+    </tr>
+  </thead>
+  <tbody>
+    {[ 
       ['Terminal integration', '✓', '✗'],
       ['Tab completion', '✓', '✓'],
       ['Language agnostic', '✓', '✓'],
@@ -30,7 +68,35 @@ As AI-powered development tools continue to reshape how we write code, [Codeium'
       ['NVIM Support', '✗', '✗'],
       ['Models Supported', 'GPT-4o, Claude 3.5', 'GPT-4, Claude 3.5, Gemini'],
       ['Pricing', 'Free, Pro $15/mo, Ultimate $60/mo', 'Free tier + Teams $19/user/mo + Enterprise custom pricing']
-   ]
+   ].map((row, i) => (
+      <tr key={i} style={{ 
+        backgroundColor: 'white',
+        transition: 'background-color 0.2s'
+      }}>
+        <td style={{
+          padding: '1rem',
+          borderBottom: '1px solid #e2e8f0',
+          fontWeight: '500',
+          backgroundColor: '#f8fafc'
+        }}>{row[0]}</td>
+        <td style={{
+          padding: '1rem',
+          borderBottom: '1px solid #e2e8f0',
+          textAlign: 'center',
+          color: row[1] === '✓' ? '#22c55e' : row[1] === '✗' ? '#ef4444' : '#1a202c',
+          fontSize: (row[1] === '✓' || row[1] === '✗') ? '1.5rem' : '0.95rem'
+        }}>{row[1]}</td>
+        <td style={{
+          padding: '1rem',
+          borderBottom: '1px solid #e2e8f0',
+          textAlign: 'center',
+          color: row[2] === '✓' ? '#22c55e' : row[2] === '✗' ? '#ef4444' : '#1a202c',
+          fontSize: (row[2] === '✓' || row[2] === '✗') ? '1.5rem' : '0.95rem'
+        }}>{row[2]}</td>
+      </tr>
+    ))}
+  </tbody>
+</table>
 
 ## Code Completion
 
