--- a/copilot/comparing-copilot-vs-continue.mdx
+++ b/copilot/comparing-copilot-vs-continue.mdx
@@ -67,7 +67,7 @@ As AI-powered development tools continue to reshape how we write code, [GitHub C
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'GPT-4, Custom Models', 'Universal and Custom Models'],
-    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Free + Enterprise plans']
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise $39/mo', 'Free + Enterprise plans']
 ].map((row, i) => (
       <tr key={i} style={{ 
         backgroundColor: 'white',
@@ -133,11 +133,24 @@ Being open-source, Continue provides transparent security through auditable code
 ## Pricing
 
 ### GitHub Copilot
-- **Individual** - $10/month or $100/year
-- **Business** - $19/user/month
-- **Enterprise** - Custom pricing
-- **Education** - Free for students and teachers
-- **Trial** - Free trial available
+- **Individual Plan**
+  - $10/month or $100/year
+  - Real-time code suggestions
+  - Multi-language support
+  - IDE integrations
+  - Basic chat features
+- **Business Plan**
+  - $19/month per user
+  - Team management features
+  - Advanced security controls
+  - Custom model fine-tuning
+  - Priority support
+- **Enterprise Plan**
+  - $39/month per user
+  - Custom deployments
+  - Advanced analytics
+  - SSO and SAML integration
+  - Dedicated support team
 
 ### Continue
 - **Free Open Source**
