--- a/copilot/comparing-copilot-vs-qodo.mdx
+++ b/copilot/comparing-copilot-vs-qodo.mdx
@@ -69,7 +69,7 @@ This comparison will help you understand the key differences and make an informe
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'GPT-4, Custom Models', 'GPT-4, Claude 3.5, Gemini'],
-    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Free Developer tier + Teams $19/user/mo + Enterprise custom price']
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise $39/mo', 'Free Developer tier, Teams $19/user/mo, Enterprise custom price']
 ].map((row, i) => (
       <tr key={i} style={{ 
         backgroundColor: 'white',
@@ -135,24 +135,24 @@ Qodo Gen emphasizes privacy through encrypted code snippet transmission and allo
 ## Pricing
 
 ### GitHub Copilot
-- **Free Plan**
-  - Free for individual users
-  - Unlimited public/private repositories
-  - Automatic security and version updates
-  - 2000 CI/CD minutes per month
-  - 500MB of Packages storage
-- **Team Plan**
-  - $4 per user, per month
-  - Access to GitHub Codespaces 
-  - Protected branches
-  - 3000 CI/CD minutes per month
-  - 2GB of Packages storage
+- **Individual Plan**
+  - $10/month or $100/year
+  - Real-time code suggestions
+  - Multi-language support
+  - IDE integrations
+  - Basic chat features
+- **Business Plan**
+  - $19/month per user
+  - Team management features
+  - Advanced security controls
+  - Custom model fine-tuning
+  - Priority support
 - **Enterprise Plan**
-  - $21 per user, per month
-  - Data residency 
-  - Enterprise managed users
-  - 50,000 CI/CD minutes per month
-  - 50GB of Packages storage
+  - $39/month per user
+  - Custom deployments
+  - Advanced analytics
+  - SSO and SAML integration
+  - Dedicated support team
 
 ### Qodo Gen
 - **Developer Tier**
