--- a/copilot/comparing-copilot-vs-replit.mdx
+++ b/copilot/comparing-copilot-vs-replit.mdx
@@ -69,7 +69,7 @@ This comparison will help you understand the key differences and make an informe
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✓', 'N/A'],
     ['Models Supported', 'GPT-4, Custom Models', 'Claude 3.5, GPT-4o'],
-    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Free tier + Core $15/mo']
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise $39/mo', 'Free tier, Core $15/mo']
 ].map((row, i) => (
       <tr key={i} style={{ 
         backgroundColor: 'white',
@@ -135,14 +135,24 @@ While specific privacy measures aren't extensively documented, Replit processes 
 ## Pricing
 
 ### GitHub Copilot
-- **Individual Plans**
-  - $10/month for monthly subscription
-  - $100/year for annual subscription
-  - Free for verified students and educators
-- **Business Plans**
-  - $19/user/month for business features
-  - Enterprise pricing available for custom solutions
-  - Volume licensing options for large organizations
+- **Individual Plan**
+  - $10/month or $100/year
+  - Real-time code suggestions
+  - Multi-language support
+  - IDE integrations
+  - Basic chat features
+- **Business Plan**
+  - $19/month per user
+  - Team management features
+  - Advanced security controls
+  - Custom model fine-tuning
+  - Priority support
+- **Enterprise Plan**
+  - $39/month per user
+  - Custom deployments
+  - Advanced analytics
+  - SSO and SAML integration
+  - Dedicated support team
 
 ### Replit AI
 - **Free Plan**
